Fix compilation on android

--- a/libqpdf/CMakeLists.txt
+++ b/libqpdf/CMakeLists.txt
@@ -169,26 +169,26 @@ if(NOT EXTERNAL_LIBS)
   endif()
 endif()
 
-if(NOT EXTERNAL_LIBS)
-  pkg_check_modules(pc_libjpeg libjpeg)
-  if(pc_libjpeg_FOUND)
-    list(APPEND dep_include_directories ${pc_libjpeg_INCLUDEDIR})
-    list(APPEND dep_link_directories ${pc_libjpeg_LIBDIR})
-    list(APPEND dep_link_libraries ${pc_libjpeg_LIBRARIES})
-    set(JPEG_INCLUDE ${pc_libjpeg_INCLUDEDIR})
-  else()
-    find_path(LIBJPEG_H_PATH jpeglib.h)
-    find_library(LIBJPEG_LIB_PATH jpeg)
-    if(LIBJPEG_H_PATH AND LIBJPEG_LIB_PATH)
-      list(APPEND dep_include_directories ${LIBJPEG_H_PATH})
-      list(APPEND dep_link_libraries ${LIBJPEG_LIB_PATH})
-      set(JPEG_INCLUDE ${LIBJPEG_H_PATH})
-    else()
-      message(SEND_ERROR "libjpeg not found")
-      set(ANYTHING_MISSING 1)
-    endif()
-  endif()
-endif()
+#if(NOT EXTERNAL_LIBS)
+#  pkg_check_modules(pc_libjpeg libjpeg)
+#  if(pc_libjpeg_FOUND)
+#    list(APPEND dep_include_directories ${pc_libjpeg_INCLUDEDIR})
+#    list(APPEND dep_link_directories ${pc_libjpeg_LIBDIR})
+#    list(APPEND dep_link_libraries ${pc_libjpeg_LIBRARIES})
+#    set(JPEG_INCLUDE ${pc_libjpeg_INCLUDEDIR})
+#  else()
+#    find_path(LIBJPEG_H_PATH jpeglib.h)
+#    find_library(LIBJPEG_LIB_PATH jpeg)
+#    if(LIBJPEG_H_PATH AND LIBJPEG_LIB_PATH)
+#      list(APPEND dep_include_directories ${LIBJPEG_H_PATH})
+#      list(APPEND dep_link_libraries ${LIBJPEG_LIB_PATH})
+#      set(JPEG_INCLUDE ${LIBJPEG_H_PATH})
+#    else()
+#      message(SEND_ERROR "libjpeg not found")
+#      set(ANYTHING_MISSING 1)
+#    endif()
+#  endif()
+#endif()
 
 # Update JPEG_INCLUDE in PARENT_SCOPE after we have finished setting it.
 set(JPEG_INCLUDE ${JPEG_INCLUDE} PARENT_SCOPE)
